--- a/ru/modules/ROOT/pages/p1-010-happiness.adoc
+++ b/ru/modules/ROOT/pages/p1-010-happiness.adoc
@@ -10,8 +10,7 @@
 Каждый зарабатывает по-своему, и такая работа тоже нужна.
 Однако хочу отстроиться и обозначить основное отличие.
 
-Изначально не думал продавать что-либо — книгу, тренинг, продукт или сервис.
-Интересна критика и диалог в поиске ответа на вопрос «Что мне делать?»
+Тут просто мысли на основе Текста  https://text.sharedgoals.ru/ru/ [«Что мне делать?» Сергея Полякова]. Идея, концепция и мысли оттуда, а опыт личный, и, возможно, релевантный читателю. 
 Важно самому разобраться, а не продать что-либо :-)
 
 Учитывая обширность и кажущуюся простоту поднимаемых вопросов, единственно возможным способом пройти через текст вместе будет внимательное продвижение от одного вывода к другому.
