--- a/ru/modules/ROOT/pages/p1-010-happiness.adoc
+++ b/ru/modules/ROOT/pages/p1-010-happiness.adoc
@@ -6,11 +6,9 @@
 [#cornerstone_of_text]
 == Что делать и главное — ради чего?
 
-В информационном поле постоянно присутствуют психологи и разные коучи с тренингами про эффективную жизнь.
-Каждый зарабатывает по-своему, и такая работа тоже нужна.
-Однако хочу отстроиться и обозначить основное отличие.
 
-Тут просто мысли на основе Текста  https://text.sharedgoals.ru/ru/ [«Что мне делать?» Сергея Полякова]. Идея, концепция и мысли оттуда, а опыт личный, и, возможно, релевантный читателю. 
+В этом тексте мои мысли на основе Текста  https://text.sharedgoals.ru/ru/ [«Что мне делать?» Сергея Полякова]. Идея, концепция и мысли оттуда, а опыт личный, и, возможно, релевантный читателю. 
+
 Важно самому разобраться, а не продать что-либо :-)
 
 Учитывая обширность и кажущуюся простоту поднимаемых вопросов, единственно возможным способом пройти через текст вместе будет внимательное продвижение от одного вывода к другому.
