--- a/ru/modules/ROOT/pages/p1-010-happiness.adoc
+++ b/ru/modules/ROOT/pages/p1-010-happiness.adoc
@@ -7,7 +7,7 @@
 == Что делать и главное — ради чего?
 
 
-В этом тексте мои мысли на основе Текста  https://text.sharedgoals.ru/ru/[«Что мне делать?» Сергея Полякова]. Идея, концепция и мысли оттуда, а опыт личный, и, возможно, релевантный читателю. 
+В этом тексте мои мысли на основе Текста  https://text.sharedgoals.ru/ru/[«Что мне делать?» Сергея Полякова]. Идея, концепция и мысли оттуда, а опыт личный, и, возможно, релевантный Читателю. Кстати, СПАСИБО, если дочитали! ;-)
 
 Важно самому разобраться, а не продать что-либо :-)
 
@@ -16,12 +16,12 @@
 Не так важно, что они будут слишком очевидны и банальны – их всегда можно пропустить, пользуясь удобной навигацией.
 Важнее то, что они должны быть последовательно связаны.
 
-Пожалуй, нужно начать совместный путь, явно обозначив общую цель, которая будет принята большинством.
+Пожалуй, нужно начать совместный путь, явно обозначив Общую цель, которая будет принята большинством.
 
 Таким краеугольным камнем для этого текста стало утверждение, что большинство ищущих ответ на вопрос «Что мне делать?» людей хотят быть счастливыми.
 И изначально, в глубине души, стремятся к этому состоянию, как к мечте.
 
-Смысл жизни может быть в том, чтобы стремиться к счастью.
+Смысл жизни может быть в том, чтобы стремиться к счастью. В процессе. В моментАХ...
 
 И такой ответ на самый важный вопрос кажется очень логичным и правильным.
 То есть полное и развёрнутое название текста может быть «Что мне делать, чтобы быть счастливым? :-)»
