--- a/ru/modules/ROOT/pages/p1-010-happiness.adoc
+++ b/ru/modules/ROOT/pages/p1-010-happiness.adoc
@@ -62,7 +62,13 @@
 Когда кто-то создавал свою семью, то получал закваску от родителей и был «С Частью» своих предков дальше по жизни.
 ****
 
-Историю об этом можно посмотреть, а лучше прочувствовать на себе в http://teatrvkusa.ru/pekarnya/[спектакле «Семейная пекарня»].
+Историю об этом можно посмотреть, а лучше прочувствовать на себе в http://teatrvkusa.ru/pekarnya/[спектакле «Семейная пекарня»]. Случайно на Фестивалей Театров в 2023 году пришли с сеьей посмотреть. Посмотрели и даже сыграл главную роль. Это было неожиданно... На выходе усталость, счастье и улыбка до ушей. На весь год! 
+
+
+
+А ещё. Театр Вкуса, кстати строит Театр под Смоленском в деревне - Юрий (лидер) счастлив от процесса и стремиться. А в 2024 году я пригласил друзей и знакомых в этот Театр и познакомил еще с массой людей, возможно теперь и им хорошо и в Питер будут приезжать чаще на гастроли! :-) 
+
+
 
 А если не задумываться над первоначальными смыслами слова, то все мы можем чувствовать и ассоциировать Счастье с ощущением эмоционального взлёта.
 
